@trivial Fix alignment of icons with labels in IE9

--- a/source/less/base/icons.less
+++ b/source/less/base/icons.less
@@ -175,6 +175,8 @@ p > [class*=" icon-"] {
   background-repeat: no-repeat;
   
   opacity: 0.65;
+  
+  vertical-align: top; // Fix alignment of icons with labels in IE 9
 }
 
 // Icons in buttons
